# BatSignal

./: .gitignore  README.md  config.json  console.py  control.py  forms.py  install_control.sh  install_sensor.sh  installation.md
Bat Signal/Documentation/: BatSignal_SDD.tex  BatSignal_SDS.tex  BatSignal_SRS.aux  BatSignal_SRS.tex  BatSignal_SRS.toc  FormatRestrictions.txt  discussions.txt
Bat Signal/Documentation/Graphics/: BatSignalResources.mdj
Bat Signal/netScripts/: interfaces  piome-bridge
BatSignal/: control.py  sensor.py
BatSignal/Documentation/: .gitignore  BatSignal_SDD.tex  discussions.txt  installation.md  microphone.md  sensor.md  setting_up_microphone.md  v8.txt
BatSignal/Documentation/Graphics/: BatSignalResources.mdj
BatSignal/control/: main.py
BatSignal/netScripts/: bat-signal-bridge  bat-signal-node  piome-node
BatSignal/sensor/: main.py
Irvine/Examples/Project32/: Project.lst  Project.sln  Project.vcxproj  main.asm
Irvine/Examples/Project64/: Project64.sln  Project64.vcxproj  Project64.vcxproj.filters
Lab01/: CMakeLists.txt  Lab01.sdf  Lab01.sln
Lab01/Lab01/: Lab01.vcxproj  Lab01.vcxproj.filters  main.c  merge.c  merge.h  quick.c  quick.h  radix.c  radix.h  unsorted.txt
RPiConfScripts/: installguide.txt  installguide.txt~  net_interfaces
doc/: .gitignore  BatSignal_SDD.out  FinalSubmission.tex
setup/control/: bat-signal-gateway  dhcpd.conf  interfaces  iptables.sh
setup/sensor/: alsa-base.conf  bat-signal-node  interfaces  modules
static/: messages  theme.css
templates/: config.html  index.html
(+3 files in other folders)
